2013-10-24  Julien Moutte <julien@fluendo.com>

	* libfludownloader.spec.in: Fix spec file :)

2013-10-24  Julien Moutte <julien@fluendo.com>

	* INSTALL: Updated.
	* Makefile.am: Distribute spec file.
	* configure.ac: Generate spec file.
	* libfludownloader.spec.in: Add a spec file to build RPMs.

2013-09-30  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.3 ===

2013-23-09  Andoni Morales  <amorales@fluendo.com>

	* configure.ac:
	* Makefile.am:
	Fix DLL generation with magic libtool's -no-undefined option

2013-23-09  Andoni Morales  <amorales@fluendo.com>

	* examples/multidl.c:
	* lib/fludownloader.c:
	Use portable macros for formats

2013-05-09  Josep Torra  <josep@fluendo.com>

	* Makefile.am:
	* configure.ac:
	Fixes build in linux.

2013-03-19  Release Maker <nomail@fluendo.com>

	* configure.ac: Back to TRUNK.

=== release 0.10.2 ===

2013-03-19  Fluendo <julien@fluendo.com>

	* configure.ac: Fix configure for new_release.sh script.

2013-03-19  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (main):
	* lib/fludownloader.c: (fludownloader_new),
	(fludownloader_task_get_length),
	(fludownloader_set_polling_period),
	(fludownloader_get_polling_period):
	* lib/fludownloader.h:
	  - Change polling period API to allow it to be set/get at any time.

2013-03-19  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (_thread_function):
	  - Use g_usleep() instead of usleep() for portability.

2013-03-18  Xavi Artigas  <xartigas@fluendo.com>

	* examples/multidl.c: (main):
	* lib/fludownloader.c: (_thread_function), (fludownloader_new):
	* lib/fludownloader.h:
	  - Add API to set a polling period if desired. This allows reducing the CPU
	    consumption by sacrificing network throughput.

2013-03-15  Xavi Artigas  <xartigas@fluendo.com>

	* lib/fludownloader.c: (fludownloader_task_get_url):
	  - Remove useless, commented-out locks.
	
2013-03-15  Xavi Artigas  <xartigas@fluendo.com>
